# ganglion-memory

./: README.md  pyproject.toml
src/ganglion/: __init__.py
src/ganglion/memory/: __init__.py  agent.py  core.py  cortex.py  embed.py  loop.py  refine.py  reflect.py  similarity.py  synthesize.py  types.py  wrap.py
src/ganglion/memory/backends/: __init__.py  base.py  federated.py  json_file.py  sqlite.py
tests/: test_cortex.py  test_embed.py  test_improvements.py  test_memory.py  test_refine.py  test_v2_features.py  test_wrap.py
