[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ganglion"
version = "0.2.0"
description = "Biological memory primitives for agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ganglion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
