[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ganglion"
version = "0.4.0"
description = "Dumb memory, smart retrieval — let the LLM think"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0",
]
llm = [
    "anthropic>=0.20",
]
all = [
    "sentence-transformers>=2.0",
    "anthropic>=0.20",
]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ganglion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
